# agent-blackbox

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
agent_blackbox/: __init__.py  cli.py  ledger.py
agent_ledger/: __init__.py  cli.py  ledger.py
tests/: test_cli.py  test_ledger.py
